@@ -50,6 +50,12 @@ standard_name: land_ice_sigma_coordinate
 formula_terms: sigma: level topo: topg thick: thk
 dimlen:        model%general%upn
 
+[lithoz]
+dimensions:    lithoz
+units:         1
+long_name:     vertical coordinate of lithosphere layer
+dimlen:        model%lithot%nlayer
+
 [lat]
 dimensions:    time, y1, x1
 units:         degreeN
